[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-meter-client"
version = "0.1.0"
description = "Python client for the api-meter permit service"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Respondyr" }]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/Respondyr/api-meter-client-py"
Issues = "https://github.com/Respondyr/api-meter-client-py/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["apimeter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "PL"]
ignore = ["PLR2004", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]
